[package]
name = "ethereum"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.10.2"
jsonrpc-core = "14.2.0"
url = "2.2.2"
massbit = { path = "../../massbit" }
serde = "1.0"
http = "0.1.21" # must be compatible with the version rust-web3 uses
futures = "0.1.21"
tiny-keccak = "1.5.0"

# master contains changes such as
# https://github.com/paritytech/ethabi/pull/140, which upstream does not want
# and we should try to implement on top of ethabi instead of inside it, and
# tuple support which isn't upstreamed yet. For now, we shall deviate from
# ethabi, but long term we want to find a way to drop our fork.
ethabi = { git = "https://github.com/graphprotocol/ethabi.git", branch = "master" }
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "master" }
tokio = "1.11.0"
