[package]
name = "chain-solana"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
bs58 = "0.4.0"
mockall = "0.10.2"
jsonrpc-core = "14.2.0"
url = "2.2.2"
itertools = "0.10.1"
lazy_static     = "1.4.0"
log = "0.4.14"
massbit = { path = "../../massbit" }
serde = "1.0"
http = "0.1.21" # must be compatible with the version rust-web3 uses
futures = "0.1.21"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
tiny-keccak = "1.5.0"
tokio = "1.11.0"
semver = "1.0.3"
anyhow = "1.0"

[dependencies.solana-transaction-status]
package = "solana-transaction-status"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[dependencies.solana-program]
package = "solana-program"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[dependencies.solana-client]
package = "solana-client"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"

[dependencies.solana-sdk]
package = "solana-sdk"
git = "https://github.com/massbitprotocol/solana.git"
branch = "massbit"