[package]
name = "block"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
plugin = { path = "../../../plugin" } # Todo copy these to our compiler repo
massbit-chain-substrate = { path = "../../../massbit-core/chain/substrate"} # Todo copy these to our compiler repo
index-store = { path = "../../../massbit-core/index-store"} # Todo copy these to our compiler repo

[lib]
crate-type = ["cdylib"]