[package]
name = "block"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.0", features = ["postgres"] }
#structmap = "0.1.5"
#structmap-derive = "0.1.5"
chrono = "0.4.19"
hex = "0.4.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
# Massbit dependencies
[lib]
crate-type = ["cdylib"]

[workspace]