[package]
name = "massbit-data"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
dotenv = "0.15.0"
isatty = "0.1.9"
serde = "1.0.126"
serde_derive = "1.0.130"
slog = "2.7.0"
slog-async = "2.7.0"
slog-envlogger = "2.1.0"
slog-term = "2.7.0"
thiserror = "1.0.30"
diesel = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel_derives = "1.4"
http = "0.2.5"
num-bigint = { version = "^0.2.6", features = ["serde"] }
num_cpus = "1.13.0"
num-traits = "0.2.14"
bigdecimal = { version = "0.1.0", features = ["serde"] }
hex = "0.4.3"
graphql-parser = "0.4.0"
futures = "0.1.21"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
futures-util = "0.3.17"
prometheus = "0.12.0"
priority-queue = "0.7.0"
rand = "0.6.1"
reqwest = "0.11"
massbit-common = {path = "../common"}
strum = "0.21.0"
strum_macros = "0.21.1"