[package]
name = "massbit-drive"
version = "0.0.0"
authors = ["Viet Tai <vuviettai@gmail.com>"]
description = "A `cargo generate` template for quick-starting a procedural macro crate"
keywords = ["template", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
Inflector = "0.11.4"
[dependencies.graph]
package = "graph"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "anhhuy0501-patch-add-pub"