[package]
name = "massbit-hasura-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
#anyhow = "1.0.51" in compatiple with anyhow!("invalid H256 value `{}` has {} bytes instead of {}");

http = "0.2.3"
reqwest = { version = "0.10", features = ["json", "stream"] }
serde = { version = "1.0.126", features = ["rc", "derive"] }
serde_json = "1.0.72"
log = "0.4.0"
env_logger = "0.8.4"
massbit-common = { path = "../../core/common" }
