[package]
name = "index-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel              = { version = "1.4.0", features = ["postgres"] }
diesel_transaction_handles = "0.1.1"
Inflector = "0.11.3"
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
tokio-postgres      =  "0.7.2"
#postgres           = "0.19.1"
structmap           = "0.1.5"
lazy_static         = "1.2.0"
log                 = "0.4.0"
structmap-derive    = "0.1.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"
env_logger          = "0.9.0"
massbit-common      = { path = "../../core/common"}

[dependencies.graph]
package = "graph"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "anhhuy0501-patch-add-pub"
[dependencies.graph-node]
package = "graph-node"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "anhhuy0501-patch-add-pub"

[dependencies.graph-store-postgres]
package = "graph-store-postgres"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "anhhuy0501-patch-add-pub"
[dependencies.graph-mock]
package = "graph-mock"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "anhhuy0501-patch-add-pub"