[package]
name = "index-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel                  = { version = "1.4.0", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-dynamic-schema   = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
diesel-derive-enum      = { version = "1.1", features = ["postgres"] }
diesel_migrations       = "1.4.0"
diesel_derives          = "1.4.1"
diesel_transaction_handles = "0.1.1"
hex                     = { version = "0.4.3", default-features = false }
Inflector = "0.11.3"
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
tokio-postgres      =  "0.7.2"
lazy_static         = "1.2.0"
log                 = "0.4.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"
env_logger          = "0.9.0"
serde               = { version = "1.0"}
strum               = "0.21.0"
strum_macros        = "0.21.1"
massbit-common      = { path = "../../core/common"}
[dependencies.graph]
package = "graph"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[dependencies.graph-node]
package = "graph-node"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[dependencies.graph-store-postgres]
package = "graph-store-postgres"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[dependencies.graph-chain-ethereum]
package = "graph-chain-ethereum"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"

[dependencies.graph-mock]
package = "graph-mock"
git = "https://github.com/massbitprotocol/massbit-graph-node"
branch = "main"