[package]
name = "logger"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log                 = "0.4.0"
env_logger          = "0.8.4"
chrono              = "0.4"
log4rs              = { git = "https://github.com/yakov-bakhmatov/log4rs", branch = "async-rotation" }
lazy_static         = "1.4.0"