[package]
name = "indexer-orm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel          = { version = "1.4.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel-derive-enum  = { version = "1.1", features = ["postgres"] }
diesel_migrations   = "1.4.0"
serde               = "1.0"
serde_derive        = { version = "1.0", optional = false }

massbit-common = { path = "../common" }