[package]
name = "index-manager-lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-http-server = "15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.40"
log = "0.4.0"
env_logger = "0.8.4"
tonic = "0.4" # Chain Reader Client
prost = "0.7" # Chain Reader Client
async-std = "1.9.0"
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
futures = { version = "0.3.13", features = ["compat"] }
tokio-compat-02 = "0.2"
serde_yaml = "0.8"
anyhow = "1.0"
diesel = { version = "1.4.0", features = ["postgres"] }
reqwest = "0.10.8"
postgres = "0.15"
lazy_static = "1.2.0"
rand = "0.8.4"
strum_macros = "0.21.1"
strum = "0.21.0"

# Massbit dependencies
ipfs-client = { path = "../../core/ipfs-client" }
tokio02-spawn = { path = "../../core/tokio02-spawn" }
massbit-chain-substrate = { path = "../../core/chain/substrate"}
massbit-chain-solana = { path = "../../core/chain/solana" }
#massbit-chain-ethereum = { path = "../../core/chain/ethereum" }
index-store = { path = "../../core/index-store" }
adapter = { path = "../../plugin/adapter" }

[build-dependencies]
tonic-build = "0.4" # Chain Reader Client

[dependencies.node-template-runtime]
git = "https://github.com/scs/substrate-api-client-test-node"
branch = "bump-to-polkadot-v0.9.2"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-runtime"
default-features=false

[dependencies.system]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "frame-system"
optional = false

[dependencies.sp-core]
git = "https://github.com/paritytech/substrate.git"
branch = "master"
package = "sp-core"
default-features = false
features = ["full_crypto"]