[package]
name = "index-manager-main"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.2.0", features = ["full"]} # Required by Tonic
log = "0.4.0"
env_logger = "0.8.4"

# Massbit dependencies
index-manager-lib = { path = "../lib" }
logger = { path = "../logger" }